// Alist Provider Client API
//
// This is the client-facing gRPC API for Alist provider

syntax = "proto3";

package synctv.provider.alist;

// Alist Provider Service
//
// Client-facing API for Alist network storage access
service AlistProviderService {
  // Login to Alist server
  rpc Login(LoginRequest) returns (LoginResponse);

  // List directory contents
  rpc List(ListRequest) returns (ListResponse);

  // Get current user info
  rpc GetMe(GetMeRequest) returns (GetMeResponse);

  // Logout from Alist
  rpc Logout(LogoutRequest) returns (LogoutResponse);

  // Get saved credentials (binds)
  rpc GetBinds(GetBindsRequest) returns (GetBindsResponse);
}

// Login request
message LoginRequest {
  string host = 1;
  string username = 2;
  string password = 3; // Plain password
  string hashed_password = 4; // Hashed password (if provided, password is ignored)
  string instance_name = 5; // Optional provider instance name
}

// Login response
message LoginResponse {
  string token = 1;
}

// List directory request
message ListRequest {
  string host = 1;
  string token = 2;
  string path = 3;
  string password = 4; // Directory password (optional)
  uint64 page = 5;
  uint64 per_page = 6;
  bool refresh = 7;
  string instance_name = 8; // Optional provider instance name
}

// List directory response
message ListResponse {
  repeated FileItem content = 1;
  uint64 total = 2;
}

// File/directory item
message FileItem {
  string name = 1;
  uint64 size = 2;
  bool is_dir = 3;
  uint64 modified = 4;
  string sign = 5;
  string thumb = 6;
  uint64 type = 7;
}

// Get user info request
message GetMeRequest {
  string host = 1;
  string token = 2;
  string instance_name = 3; // Optional provider instance name
}

// Get user info response
message GetMeResponse {
  string username = 1;
  string base_path = 2;
}

// Logout request
message LogoutRequest {
  string instance_name = 1; // Optional provider instance name
}

// Logout response
message LogoutResponse {
  string message = 1;
}

// Get binds request
message GetBindsRequest {
  string instance_name = 1; // Optional provider instance name
}

// Get binds response
message GetBindsResponse {
  repeated BindInfo binds = 1;
}

// Saved credential information
message BindInfo {
  string id = 1;
  string host = 2;
  string username = 3;
  string created_at = 4;
}
